# ucalib

./: CMakeLists.txt  README.md
docs/: intrinsics.tex
src/: calibrate.cpp  calibration.cpp  calibration.hpp  compile-patterns.cpp  correct.cpp  debug.hpp  draw.cpp  gen-chessboard.cpp  intrinsics-test.cpp  lm.hpp  pattern.hpp
